--- a/src/main/resources/templates/emailTemplate.html
+++ b/src/main/resources/templates/emailTemplate.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 <div class="email-container">
-    <h2>안녕하세요, <span th:text="${name}"></span>님!</h2>
+    <h2>안녕하세요, <span th:text="${mail}"></span>님!</h2>
     <p>회원가입을 위해 아래 인증 코드를 입력해 주세요:</p>
     <div class="cert-code" th:text="${certCode}"></div>
 </div>
